<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/menu_body"
    android:layoutDirection="rtl">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingTop="@dimen/appbar_padding_top"
        android:background="@drawable/background_actionbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/ListMessagesRecive"
            app:titleTextColor="@color/md_black_1000"
            app:titleTextAppearance="@style/TextAppearance.Medium"
            android:layout_gravity="right"
            android:gravity="right">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/logo_toolbar"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                tools:ignore="RtlHardcoded" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNotMessage"
            android:text="@string/NotMessage"
            android:textColor="#000000"/>
        <ListView
            android:id="@+id/listViewMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="55dp"
            android:background="@drawable/rounded_listview_message">
        </ListView>
    </LinearLayout>
    <!--<FrameLayout-->
        <!--android:id="@+id/frame"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Order"
            android:id="@+id/btnOrderBottom"
            android:background="@drawable/rounded_button_bottom"
            android:textColor="#052d93"
            android:drawableTop="@drawable/jobs"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/AcceptOrder"
            android:id="@+id/btnAcceptOrderBottom"
            android:background="@drawable/rounded_button_bottom"
            android:textColor="#052d93"
            android:drawableTop="@drawable/dutys"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Credits"
            android:id="@+id/btncrediteBottom"
            android:background="@drawable/rounded_button_bottom"
            android:textColor="#052d93"
            android:drawableTop="@drawable/credits"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnServiceEmergency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/emergencyService"
            android:background="@drawable/rounded_button_bottom"
            android:textColor="#93050a"
            android:drawableTop="@drawable/emergency"
            android:layout_weight="1">
        </Button>
    </LinearLayout>
</RelativeLayout>
