<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/menu_body"
    android:layoutDirection="rtl">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/SavedAddress"
            app:titleTextColor="#000000"
            android:background="@drawable/background_actionbar"/>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp">
    <ListView
        android:id="@+id/listViewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp">
    </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Order"
            android:id="@+id/btnOrderBottom"
            android:background="@drawable/rounded_button"
            android:textColor="#052d93"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AcceptOrder"
            android:id="@+id/btnAcceptOrderBottom"
            android:background="@drawable/rounded_button"
            android:textColor="#052d93"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Credits"
            android:id="@+id/btncrediteBottom"
            android:background="@drawable/rounded_button"
            android:textColor="#052d93"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
