<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menu_body"
    android:focusableInTouchMode="true"
    android:layoutDirection="rtl">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/showfactor"
            app:titleTextColor="#000000"
            android:background="@drawable/background_actionbar" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/ScrollLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:verticalScrollbarPosition="right"
        android:layout_marginBottom="85dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_layout_select_job_body"
                android:orientation="vertical"
                android:id="@+id/LinearMainForm">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:id="@+id/LinearAddres">
                    <TextView
                        android:id="@+id/ContentShowFactor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:lineSpacingExtra="4dp"
                        android:textColor="#000000"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/Question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/QuestionFactor"
                    android:textColor="#000000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnNoFactor"
                    android:text="@string/No"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnYesFactor"
                    android:text="@string/Yes"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Order"
            android:id="@+id/btnOrderBottom"
            android:background="@drawable/rounded_button"
            android:textColor="#052d93"
            android:layout_weight="1"
            android:drawableTop="@drawable/job2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AcceptOrder"
            android:id="@+id/btnAcceptOrderBottom"
            android:background="@drawable/rounded_button"
            android:textColor="#052d93"
            android:layout_weight="1"
            android:drawableTop="@drawable/duty2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Credits"
            android:id="@+id/btncrediteBottom"
            android:background="@drawable/rounded_button"
            android:textColor="#052d93"
            android:layout_weight="1"
            android:drawableTop="@drawable/credit2"/>
    </LinearLayout>
</RelativeLayout>
